# mcc

./: .clang-format  .gitignore  .hgignore  CMakeLists.txt  COPYING  ICE.c  ICE.h  ICE_ast.c  MANIFESTO  Make.rb  Makefile  MultiProcess.rb  README  README.md  TODO  config.h  fileBuffer.c  fileBuffer.h  fileOpener.c  list.c  list.h  macro.c  macro.h  macro_btree.c  macro_hash.c  macro_private.h  mcc.c  mcc.h  options.c  options.h  preprocessor.c  shunting.c  shunting.rb  stack.c  stack.h  stringBuffer.c  stringBuffer.h  symbol_table.c  symbol_table.h  tokenList.c  (+6 more)
.github/workflows/: ccpp.yml
eral/: CMakeLists.txt  fileBuffer.c  fileBuffer.h  liberal.h  list.c  list.h  stringBuffer.c  stringBuffer.h
eral/test/: CMakeLists.txt
src/: CMakeLists.txt  ICE.c  ICE.h  config.h  fileOpener.c  macro.c  macro_hash.c  macro_private.h  mcc.c  mcc.h  options.c  options.h  preprocessor.c  tokenList.c  tokenList.h  tokeniser.c  tokens.c  tokens.h  toolChainCommands.h
src/emitter/: CMakeLists.txt
src/emitter/test/: CMakeLists.txt  test_emitter.c
src/eral/: CMakeLists.txt  fileBuffer.c  fileBuffer.h  hash_table.c  hash_table.h  liberal.h  list.c  list.h  stack.c  stack.h  stringBuffer.c  stringBuffer.h
src/eral/test/: CMakeLists.txt  test_FileBuffer.c  test_HashTable.c  test_List.c  test_Stack.c  test_StringBuffer.c
src/parser/: CMakeLists.txt  constants.c  declarations.c  enums.c  expressions.c  grammar.txt  parser.c  parser.h  statements.c  structs.c
src/parser/private/: constants.h  declarations.h  enums.h  expressions.h  parser_shared.h  statements.h  structs.h
src/parser/test/: CMakeLists.txt  test_parser.c
src/preprocessor/: CMakeLists.txt  ICE.c  conditional.c  macro.c  macro.h  macro_expansion.c  macro_expansion.h  macro_hash.c  preprocessor.c  preprocessor.h
src/preprocessor/private/: macro_private.h  preprocessor_private.h
src/preprocessor/test/: CMakeLists.txt  test_Conditionals.c  test_ICE.c  test_MacroReplacement.c  test_Macros.c  test_Preprocessor.c
test/: CMakeLists.txt  TestUtils.c  TestUtils.h  test_FileBuffer.c  test_ICE.c  test_List.c  test_MacroReplacement.c  test_Macros.c  test_Options.c  test_Preprocessor.c  test_Stack.c  test_StringBuffer.c  test_TokenList.c  test_Tokeniser.c
